// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jest AST Utils addTransformerToConfig should add transformer to export default config 1`] = `
"export default {
  transform: { '^.+\\\\.[tj]sx?$': ['ts-jest', {tsconfig: '<rootDir>/tsconfig.spec.json'}], '^(?!.*\\\\.(js|jsx|ts|tsx|css|json)$)': '@nx/react/plugins/jest' },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html'],
  displayName: 'blah',
  preset: '../../jest.preset.js'
};"
`;

exports[`Jest AST Utils addTransformerToConfig should add transformer to export default config with no transform object 1`] = `
"export default {
moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html'],
displayName: 'blah',
preset: '../../jest.preset.js',
transform: { '^.+\\\\.[tj]sx?$': ['ts-jest', {tsconfig: '<rootDir>/tsconfig.spec.json'}] }
};"
`;

exports[`Jest AST Utils addTransformerToConfig should add transformer to module.exports config 1`] = `
"module.exports = {
  transform: { '^.+\\\\.[tj]sx?$': ['ts-jest', {tsconfig: '<rootDir>/tsconfig.spec.json'}], '^(?!.*\\\\.(js|jsx|ts|tsx|css|json)$)': '@nx/react/plugins/jest' },
  moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html'],
  displayName: 'blah',
  preset: '../../jest.preset.js'
};"
`;

exports[`Jest AST Utils addTransformerToConfig should add transformer to module.exports config with no transform object 1`] = `
"module.exports = {
moduleFileExtensions: ['ts', 'tsx', 'js', 'jsx', 'html'],
displayName: 'blah',
preset: '../../jest.preset.js',
transform: { '^.+\\\\.[tj]sx?$': ['ts-jest', {tsconfig: '<rootDir>/tsconfig.spec.json'}] }
};"
`;
